# 25ST-Bachelor-Researchproject

./: .gitignore  readme.md  requirements.txt
cli_project/: setup.cfg
cli_project/src/: main.py
cli_project/src/cli_launcher/: cli.py  new_cli.py  reporting.py
cli_project/src/constants/: cli_project_constants.py
cli_project/src/interpolation_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
cli_project/src/utilities/: rich_utilities.py  user_input_utilities.py  user_output_utilities.py
cli_project/tests/data/: dynamic_newton.py  pipeline_config.ini  pipeline_input.ini
internal_project/: setup.cfg
internal_project/src/constants/: constants.py  internal_logic_constants.py
internal_project/src/data_structures/: freezable.py
internal_project/src/exceptions/: cycle_exception.py  directory_not_found_error.py  duplicate_value_error.py  evaluation_error.py  format_error.py  frozen_instance_error.py  invalid_argument_exception.py  invalid_configuration_data_exception.py  module_already_loaded_exception.py  no_such_pipeline_component_error.py  none_error.py  not_instantiable_error.py  pipeline_configuration_constraint_exception.py  pipeline_constraint_violation_exception.py  pipeline_execution_attribute_modified_exception.py  pipeline_execution_attribute_unmodified_exception.py  pipeline_execution_constraint_exception.py  prohibited_attribute_override_exception.py  type_annotation_error.py
internal_project/src/general_data_structures/: freezable.py
internal_project/src/internal_project.egg-info/: PKG-INFO  SOURCES.txt
(+603 files in other folders)
