[metadata]
name = interpolation-pipeline
version = 0.1.0
description = CLI wrapper for our interpolation pipeline

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.13.5
# if your pipeline code needs external deps, list them here:
# install_requires =
#     configparser>=5

[options.entry_points]
console_scripts =
    interpolation_pipeline = cli_launcher.cli:main
