[metadata]
name = internal-project
version = 0.1.0
description = Internal project containing all modules and main program structure

[options]
# where to find your packages
package_dir =
    = src
# automatically find all packages under `src/`
packages = find:
python_requires = >=3.13.5

[options.packages.find]
where = src
